# test-chat

./: .env.example  .gitignore  Dockerfile  Dockerfile.windows  README.md  pyproject.toml
chat-ui/: package-lock.json
chat-ui/src/: App.js
src/data/: training_data.json
src/flare_ai_social/: __init__.py  bot_manager.py  main.py  settings.py  tune_model.py
src/flare_ai_social/ai/: base.py  gemini.py
src/flare_ai_social/api/routes/: chat.py
src/flare_ai_social/prompts/: __init__.py  dataset.py  templates.py
src/flare_ai_social/telegram/: service.py
src/flare_ai_social/twitter/: __init__.py  service.py
